--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   body {
     text-align: center;
+    overflow-x: hidden;
   }
 
   /* --- TELA INICIAL --- */
@@ -27,6 +28,14 @@
     justify-content: center;
     align-items: center;
     background: inherit;
+    transition: opacity 1.2s ease, filter 1.2s ease;
+    z-index: 10;
+  }
+
+  #intro.fade-out {
+    opacity: 0;
+    filter: blur(12px);
+    pointer-events: none;
   }
 
   #intro button {
@@ -42,18 +51,28 @@
 
   /* --- FORMULÁRIO --- */
   #formulario {
-    display: none;
-    padding: 40px 20px 60px; /* 👈 PADDING REAL DOS DOIS LADOS */
+    padding: 40px 20px 60px;
     box-sizing: border-box;
+    opacity: 0;
+    filter: blur(14px);
+    transform: scale(0.97);
+    transition: opacity 1.6s ease, filter 1.6s ease, transform 1.6s ease;
+    display: none;
+  }
+
+  #formulario.ativo {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
   }
 
   .card {
     background: #fff;
     max-width: 380px;
-    margin: 0 auto; /* centraliza corretamente */
+    margin: 0 auto;
     padding: 32px 24px;
     border-radius: 18px;
-    box-shadow: 0 15px 40px rgba(0,0,0,0.25);
+    box-shadow: 0 18px 45px rgba(0,0,0,0.25);
     text-align: left;
   }
 
@@ -177,8 +196,20 @@ let fotoBase64 = null;
 const API_URL = "https://script.google.com/macros/s/AKfycbw3kM0KukrHTN_c0K0fQQXJAKFxBFVd4EmOyuopHBsmrac9agIgrBZvWxzUnIdo_xzG9w/exec";
 
 function mostrarFormulario() {
-  intro.style.display = "none";
-  formulario.style.display = "block";
+  const intro = document.getElementById("intro");
+  const formulario = document.getElementById("formulario");
+
+  intro.classList.add("fade-out");
+
+  setTimeout(() => {
+    intro.style.display = "none";
+    formulario.style.display = "block";
+
+    // pequeno delay para o CSS animar corretamente
+    setTimeout(() => {
+      formulario.classList.add("ativo");
+    }, 50);
+  }, 1200);
 }
 
 function capturarLocalizacao() {
