--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ html, body {
   100% { background-position: 0% 50%; }
 }
 
+/* --- TELA INICIAL --- */
 #intro {
   position: fixed;
   inset: 0;
@@ -34,8 +35,8 @@ html, body {
   pointer-events: none;
 }
 #intro button {
-  font-size: 16px;       /* diminuiu */
-  padding: 10px 22px;    /* diminuiu */
+  font-size: 14px;       /* menor */
+  padding: 8px 20px;     /* menor */
   background: #6a1b9a;
   color: #fff;
   border: none;
@@ -48,28 +49,21 @@ html, body {
 /* --- FORMULÁRIO --- */
 #formulario {
   display: none;
-  padding: 40px 20px 60px;
   min-height: 100vh;
-
-  /* IMAGEM DE FUNDO */
-  background-image: url("fundonicheletintas.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  padding: 0;
   position: relative;
-
   opacity: 0;
-  filter: blur(14px);
-  transform: translateY(60px); /* inicia baixo */
+  transform: translateY(100vh);  /* começa fora da tela, abaixo */
   transition: all 1.6s ease;
-}
-#formulario.ativo {
-  opacity: 1;
-  filter: blur(0);
-  transform: translateY(0);
+  
+  /* imagem de fundo */
+  background-image: url("fundonicheletintas.png");
+  background-size: contain;       /* mantém toda a imagem visível */
+  background-position: top center; /* topo visível, centralizado horizontal */
+  background-repeat: no-repeat;
 }
 
-/* overlay para destacar card */
+/* overlay para destacar o card */
 #formulario::before {
   content: "";
   position: fixed;
@@ -78,18 +72,26 @@ html, body {
   z-index: 0;
 }
 
+#formulario.ativo {
+  opacity: 1;
+  transform: translateY(0); /* card sobe para a posição normal */
+  filter: blur(0);
+}
+
+/* --- CARD --- */
 .card {
   position: relative;
   z-index: 1;
   background: #fff;
   max-width: 380px;
-  margin: 60px auto;  /* mais espaçamento */
-  padding: 84px 24px 96px; /* 3x vertical */
+  margin: 60px auto;              /* centraliza horizontal e dá espaçamento vertical */
+  padding: 84px 24px 96px;        /* 3x vertical */
   border-radius: 20px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.25);
   text-align: left;
 }
 
+/* barra de progresso */
 .progress {
   height: 4px;
   background: #e0e0e0;
@@ -150,10 +152,12 @@ button:disabled { opacity: 0.7; }
 </head>
 <body>
 
+<!-- TELA INICIAL -->
 <div id="intro">
   <button onclick="mostrarFormulario()">Acessar questionário</button>
 </div>
 
+<!-- FORMULÁRIO -->
 <div id="formulario">
   <div class="card" id="card">
     <div class="progress"><span id="progressBar"></span></div>
@@ -209,9 +213,9 @@ let latitude, longitude, endereco = "", fotoBase64 = null;
 
 const API_URL = "https://script.google.com/macros/s/AKfycbw3kM0KukrHTN_c0K0fQQXJAKFxBFVd4EmOyuopHBsmrac9agIgrBZvWxzUnIdo_xzG9w/exec";
 
+// barra de progresso
 const campos = ["vendedor","codigoVendedor","loja","tipoCliente","statusVisita"];
 campos.forEach(id => document.getElementById(id).addEventListener("input", atualizarProgresso));
-
 let progressoExtra = 0;
 function atualizarProgresso() {
   let preenchidos = campos.filter(id => document.getElementById(id).value).length;
@@ -220,6 +224,7 @@ function atualizarProgresso() {
   document.getElementById("progressBar").style.width = porcentagem + "%";
 }
 
+// mostra o formulário
 function mostrarFormulario() {
   intro.classList.add("fade-out");
   setTimeout(() => {
@@ -229,6 +234,7 @@ function mostrarFormulario() {
   }, 1200);
 }
 
+// localização
 function capturarLocalizacao() {
   navigator.geolocation.getCurrentPosition(async pos => {
     latitude = pos.coords.latitude;
@@ -246,6 +252,7 @@ function capturarLocalizacao() {
   });
 }
 
+// câmera
 function abrirCamera() {
   document.getElementById("camera").click();
 }
@@ -258,6 +265,7 @@ document.getElementById("camera").addEventListener("change", e => {
   reader.readAsDataURL(e.target.files[0]);
 });
 
+// enviar
 function enviar() {
   const btnEnviar = document.getElementById("btnEnviar");
   btnEnviar.textContent = "Enviando...";
@@ -295,6 +303,5 @@ function enviar() {
   });
 }
 </script>
-
 </body>
 </html>
