--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@ html, body {
   font-family: Arial, sans-serif;
   min-height: 100%;
   background: linear-gradient(120deg, #6a1b9a, #9c27b0, #ffca28);
-  background-size: 200% 200%;
-  animation: bgMove 18s ease infinite;
-}
-@keyframes bgMove {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
 }
 
 /* --- TELA INICIAL --- */
@@ -28,21 +21,24 @@ html, body {
   justify-content: center;
   align-items: center;
   transition: opacity 1.2s ease, filter 1.2s ease;
+  flex-direction: column;
 }
 #intro.fade-out {
   opacity: 0;
-  filter: blur(14px);
+  filter: blur(12px);
   pointer-events: none;
 }
 #intro button {
-  font-size: 14px;       /* menor */
-  padding: 8px 20px;     /* menor */
+  font-size: 16px;
+  padding: 12px 28px;
   background: #6a1b9a;
   color: #fff;
   border: none;
   border-radius: 12px;
   cursor: pointer;
   transition: background 0.3s;
+  max-width: 220px;    /* largura menor e centralizada */
+  width: 100%;
 }
 #intro button:hover { background: #4a148c; }
 
@@ -52,15 +48,11 @@ html, body {
   min-height: 100vh;
   padding: 0;
   position: relative;
-  opacity: 0;
-  transform: translateY(100vh);  /* começa fora da tela, abaixo */
-  transition: all 1.6s ease;
-  
-  /* imagem de fundo */
   background-image: url("fundonicheletintas.png");
-  background-size: contain;       /* mantém toda a imagem visível */
-  background-position: top center; /* topo visível, centralizado horizontal */
+  background-size: contain;
+  background-position: top center;
   background-repeat: no-repeat;
+  text-align: center;
 }
 
 /* overlay para destacar o card */
@@ -68,14 +60,12 @@ html, body {
   content: "";
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.25);
+  background: rgba(0,0,0,0.2);
   z-index: 0;
 }
 
 #formulario.ativo {
-  opacity: 1;
-  transform: translateY(0); /* card sobe para a posição normal */
-  filter: blur(0);
+  display: block;
 }
 
 /* --- CARD --- */
@@ -83,9 +73,9 @@ html, body {
   position: relative;
   z-index: 1;
   background: #fff;
-  max-width: 380px;
-  margin: 60px auto;              /* centraliza horizontal e dá espaçamento vertical */
-  padding: 84px 24px 96px;        /* 3x vertical */
+  max-width: 380px;       /* largura do card menor que a tela */
+  margin: 120px auto 60px; /* mais espaço em cima, centralizado horizontal */
+  padding: 80px 24px 80px;
   border-radius: 20px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.25);
   text-align: left;
@@ -210,7 +200,6 @@ button:disabled { opacity: 0.7; }
 
 <script>
 let latitude, longitude, endereco = "", fotoBase64 = null;
-
 const API_URL = "https://script.google.com/macros/s/AKfycbw3kM0KukrHTN_c0K0fQQXJAKFxBFVd4EmOyuopHBsmrac9agIgrBZvWxzUnIdo_xzG9w/exec";
 
 // barra de progresso
@@ -219,22 +208,20 @@ campos.forEach(id => document.getElementById(id).addEventListener("input", atual
 let progressoExtra = 0;
 function atualizarProgresso() {
   let preenchidos = campos.filter(id => document.getElementById(id).value).length;
-  let total = campos.length + 2; // +2 = localização + foto
+  let total = campos.length + 2; // localização + foto
   let porcentagem = ((preenchidos + progressoExtra)/total)*100;
   document.getElementById("progressBar").style.width = porcentagem + "%";
 }
 
-// mostra o formulário
 function mostrarFormulario() {
   intro.classList.add("fade-out");
   setTimeout(() => {
     intro.style.display = "none";
     formulario.style.display = "block";
-    setTimeout(() => formulario.classList.add("ativo"), 50);
+    formulario.classList.add("ativo");
   }, 1200);
 }
 
-// localização
 function capturarLocalizacao() {
   navigator.geolocation.getCurrentPosition(async pos => {
     latitude = pos.coords.latitude;
@@ -252,10 +239,7 @@ function capturarLocalizacao() {
   });
 }
 
-// câmera
-function abrirCamera() {
-  document.getElementById("camera").click();
-}
+function abrirCamera() { document.getElementById("camera").click(); }
 document.getElementById("camera").addEventListener("change", e => {
   const reader = new FileReader();
   reader.onload = () => {
@@ -265,7 +249,6 @@ document.getElementById("camera").addEventListener("change", e => {
   reader.readAsDataURL(e.target.files[0]);
 });
 
-// enviar
 function enviar() {
   const btnEnviar = document.getElementById("btnEnviar");
   btnEnviar.textContent = "Enviando...";
