--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ html, body {
   border-radius: 12px;
   cursor: pointer;
   transition: background 0.3s;
-  max-width: 200px;    /* largura menor e centralizada */
+  max-width: 200px;
   width: 100%;
 }
 #intro button:hover { background: #4a148c; }
@@ -46,16 +46,15 @@ html, body {
 #formulario {
   display: none;
   min-height: 100vh;
-  padding: 0;
-  position: relative;
+  width: 100%;
+  text-align: center;
 
-  /* IMAGEM DE FUNDO */
+  /* IMAGEM DE FUNDO FIXA, CENTRALIZADA */
   background-image: url("fundonicheletintas.png");
   background-size: contain;
-  background-position: top center;
+  background-position: center top;
   background-repeat: no-repeat;
-
-  text-align: center;
+  background-attachment: fixed;
 }
 
 /* overlay para destacar o card */
@@ -63,7 +62,7 @@ html, body {
   content: "";
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.15);
+  background: rgba(0,0,0,0.12);
   z-index: 0;
 }
 
@@ -76,8 +75,8 @@ html, body {
   position: relative;
   z-index: 1;
   background: #fff;
-  max-width: 350px;           /* largura menor para mostrar fundo */
-  margin: 180px auto 60px;    /* mais espaço em cima */
+  max-width: 360px;       /* largura menor para mostrar fundo lateral */
+  margin: 220px auto 60px;  /* mais espaço superior para mostrar logo */
   padding: 80px 24px 60px;
   border-radius: 20px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.25);
