--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ html, body {
   padding: 0;
   font-family: Arial, sans-serif;
   min-height: 100%;
-  background: linear-gradient(120deg, #6a1b9a, #9c27b0, #ffca28);
+  width: 100%;
 }
 
 /* --- TELA INICIAL --- */
@@ -37,7 +37,7 @@ html, body {
   border-radius: 12px;
   cursor: pointer;
   transition: background 0.3s;
-  max-width: 200px;
+  max-width: 200px; /* largura menor */
   width: 100%;
 }
 #intro button:hover { background: #4a148c; }
@@ -49,20 +49,19 @@ html, body {
   width: 100%;
   text-align: center;
 
-  /* IMAGEM DE FUNDO FIXA, CENTRALIZADA */
+  /* IMAGEM DE FUNDO */
   background-image: url("fundonicheletintas.png");
-  background-size: contain;
-  background-position: center top;
+  background-size: cover; /* cobre toda a tela */
+  background-position: top center; /* topo visível */
   background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
-/* overlay para destacar o card */
+/* overlay opcional para dar destaque ao card */
 #formulario::before {
   content: "";
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.12);
+  background: rgba(0,0,0,0.08);
   z-index: 0;
 }
 
@@ -75,8 +74,8 @@ html, body {
   position: relative;
   z-index: 1;
   background: #fff;
-  max-width: 360px;       /* largura menor para mostrar fundo lateral */
-  margin: 220px auto 60px;  /* mais espaço superior para mostrar logo */
+  max-width: 360px;       /* reduz largura para aparecer fundo nas laterais */
+  margin: 220px auto 60px;  /* mais espaço superior para logo */
   padding: 80px 24px 60px;
   border-radius: 20px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.25);
