--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  min-height: 100%;
+  height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 /* --- TELA INICIAL --- */
@@ -20,8 +21,8 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: opacity 1.2s ease, filter 1.2s ease;
   flex-direction: column;
+  transition: opacity 1.2s ease, filter 1.2s ease;
 }
 #intro.fade-out {
   opacity: 0;
@@ -36,47 +37,39 @@ html, body {
   border: none;
   border-radius: 12px;
   cursor: pointer;
-  transition: background 0.3s;
-  max-width: 200px; /* largura menor */
-  width: 100%;
+  max-width: 200px;
+  width: 80%;
+  text-align: center;
 }
 #intro button:hover { background: #4a148c; }
 
 /* --- FORMULÁRIO --- */
 #formulario {
   display: none;
-  min-height: 100vh;
+  position: relative;
+  height: 100vh;
   width: 100%;
   text-align: center;
 
   /* IMAGEM DE FUNDO */
   background-image: url("fundonicheletintas.png");
-  background-size: cover; /* cobre toda a tela */
-  background-position: top center; /* topo visível */
+  background-size: cover;       /* cobre toda a tela */
+  background-position: top center;  /* topo visível */
   background-repeat: no-repeat;
-}
 
-/* overlay opcional para dar destaque ao card */
-#formulario::before {
-  content: "";
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.08);
-  z-index: 0;
-}
-
-#formulario.ativo {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start; /* card vai descendo do topo */
+  padding-top: 160px; /* espaço do topo para logo */
+  box-sizing: border-box;
 }
 
 /* --- CARD --- */
 .card {
-  position: relative;
-  z-index: 1;
   background: #fff;
-  max-width: 360px;       /* reduz largura para aparecer fundo nas laterais */
-  margin: 220px auto 60px;  /* mais espaço superior para logo */
-  padding: 80px 24px 60px;
+  max-width: 360px;       /* deixa espaço lateral para o fundo */
+  width: 90%;
+  padding: 60px 20px 40px;
   border-radius: 20px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.25);
   text-align: left;
@@ -142,11 +135,6 @@ button:disabled { opacity: 0.7; }
   font-size: 56px;
   color: #2e7d32;
 }
-
-/* igualando espaçamento entre botões de ação */
-#btnLoc, #btnFoto, #btnEnviar {
-  margin-top: 16px;
-}
 </style>
 </head>
 <body>
@@ -159,8 +147,7 @@ button:disabled { opacity: 0.7; }
 <!-- FORMULÁRIO -->
 <div id="formulario">
   <div class="card" id="card">
-    <h2>Visitas Externas</h2> <!-- título acima da barra de progresso -->
-
+    <h2>Visitas Externas</h2>
     <div class="progress"><span id="progressBar"></span></div>
 
     <label>Vendedor</label>
@@ -228,8 +215,7 @@ function mostrarFormulario() {
   intro.classList.add("fade-out");
   setTimeout(() => {
     intro.style.display = "none";
-    formulario.style.display = "block";
-    formulario.classList.add("ativo");
+    formulario.style.display = "flex";
   }, 1200);
 }
 
@@ -237,7 +223,6 @@ function capturarLocalizacao() {
   navigator.geolocation.getCurrentPosition(async pos => {
     latitude = pos.coords.latitude;
     longitude = pos.coords.longitude;
-
     const res = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`);
     const data = await res.json();
     endereco = data.display_name || "";
