--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ html, body {
   border: none;
   border-radius: 12px;
   cursor: pointer;
-  max-width: 200px;
-  width: 80%;
+  max-width: 180px; /* largura reduzida */
+  width: 70%;
   text-align: center;
 }
 #intro button:hover { background: #4a148c; }
@@ -69,7 +69,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: flex-start; 
-  padding-top: 160px; /* espaço do topo para logo */
+  padding-top: 180px; /* espaço do topo para logo */
   box-sizing: border-box;
   transition: opacity 1.5s ease, filter 1.5s ease;
 }
@@ -78,7 +78,7 @@ html, body {
 .card {
   background: #fff;
   max-width: 320px;       /* reduzimos lateral para mostrar o fundo */
-  width: 90%;
+  width: 85%;             /* mantém margem lateral */
   padding: 60px 20px 40px;
   border-radius: 20px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.25);
