--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ html, body {
   border: none;
   border-radius: 12px;
   cursor: pointer;
-  max-width: 180px; /* largura reduzida */
+  max-width: 180px; 
   width: 70%;
   text-align: center;
 }
@@ -56,20 +56,21 @@ html, body {
 #formulario {
   display: none;
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   text-align: center;
 
   /* IMAGEM DE FUNDO */
   background-image: url("fundonicheletintas.png");
   background-size: cover;       
-  background-position: top center;  
+  background-position: center top;  
   background-repeat: no-repeat;
 
   display: flex;
   justify-content: center;
   align-items: flex-start; 
-  padding-top: 180px; /* espaço do topo para logo */
+  padding-top: 180px; /* espaço topo para logo da imagem */
+  padding-bottom: 80px; /* espaço inferior */
   box-sizing: border-box;
   transition: opacity 1.5s ease, filter 1.5s ease;
 }
@@ -77,8 +78,8 @@ html, body {
 /* --- CARD --- */
 .card {
   background: #fff;
-  max-width: 320px;       /* reduzimos lateral para mostrar o fundo */
-  width: 85%;             /* mantém margem lateral */
+  max-width: 300px;       
+  width: 80%;             
   padding: 60px 20px 40px;
   border-radius: 20px;
   box-shadow: 0 18px 45px rgba(0,0,0,0.25);
