--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@ html, body {
   filter: blur(12px);
   pointer-events: none;
 }
-
 #intro button {
   font-size: 16px;
   padding: 12px 28px;
@@ -46,7 +45,7 @@ html, body {
   border: none;
   border-radius: 12px;
   cursor: pointer;
-  max-width: 180px; 
+  max-width: 180px;
   width: 70%;
   text-align: center;
 }
@@ -62,7 +61,7 @@ html, body {
 
   /* IMAGEM DE FUNDO */
   background-image: url("fundonicheletintas.png");
-  background-size: cover;       
+  background-size: cover;       /* cobre a tela inteira */
   background-position: center top;  
   background-repeat: no-repeat;
 
