--- a/index.html
+++ b/index.html
@@ -22,20 +22,7 @@ html, body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  transition: opacity 1.5s ease, filter 1.5s ease;
   background: linear-gradient(180deg, #6a1b9a, #9c27b0, #ffca28);
-  background-size: 200% 200%;
-  animation: bgMove 15s ease infinite;
-}
-@keyframes bgMove {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-#intro.fade-out {
-  opacity: 0;
-  filter: blur(12px);
-  pointer-events: none;
 }
 #intro button {
   font-size: 16px;
@@ -59,9 +46,9 @@ html, body {
   width: 100%;
   text-align: center;
 
-  /* IMAGEM DE FUNDO */
+  /* IMAGEM DE FUNDO no tamanho que deu certo */
   background-image: url("fundonicheletintas.png");
-  background-size: cover;       /* cobre a tela inteira */
+  background-size: auto 100%;    /* altura total, largura proporcional */
   background-position: center top;  
   background-repeat: no-repeat;
 
@@ -69,9 +56,8 @@ html, body {
   justify-content: center;
   align-items: flex-start; 
   padding-top: 180px; /* espaço topo para logo da imagem */
-  padding-bottom: 80px; /* espaço inferior */
+  padding-bottom: 80px; 
   box-sizing: border-box;
-  transition: opacity 1.5s ease, filter 1.5s ease;
 }
 
 /* --- CARD --- */
@@ -224,11 +210,8 @@ function atualizarProgresso() {
 
 // Transição tela inicial → formulário
 function mostrarFormulario() {
-  intro.classList.add("fade-out");
-  setTimeout(() => {
-    intro.style.display = "none";
-    formulario.style.display = "flex";
-  }, 1500);
+  document.getElementById("intro").style.display = "none";
+  document.getElementById("formulario").style.display = "flex";
 }
 
 function capturarLocalizacao() {
