--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   background: linear-gradient(180deg, #6a1b9a, #9c27b0, #ffca28);
+  transition: opacity 1.5s ease;
 }
+
+#intro.fade-out {
+  opacity: 0;
+  pointer-events: none;
+}
+
 #intro button {
   font-size: 16px;
   padding: 12px 28px;
@@ -32,55 +38,48 @@ html, body {
   border: none;
   border-radius: 12px;
   cursor: pointer;
-  max-width: 180px;
+  max-width: 200px;
   width: 70%;
   text-align: center;
 }
 #intro button:hover { background: #4a148c; }
 
-/* --- FORMULÁRIO --- */
+/* --- SEGUNDA TELA --- */
 #formulario {
   display: none;
-  position: relative;
+  opacity: 0;
+  transition: opacity 1.5s ease;
   min-height: 100vh;
   width: 100%;
-  text-align: center;
-
-  /* IMAGEM DE FUNDO ajustada ao tamanho que funcionou antes */
-  background-image: url("fundonicheletintas.png");
-  background-size: contain;      /* mantém proporção da imagem */
-  background-position: top center;
+  background-image: url("fundonicheletintas.png"); /* sua imagem de fundo */
+  background-size: cover;  /* cobre a tela inteira */
+  background-position: center top; /* posiciona a logo no topo */
   background-repeat: no-repeat;
 
   display: flex;
   justify-content: center;
-  align-items: flex-start; 
-  padding-top: 200px; /* espaço superior maior para logo da imagem */
-  padding-bottom: 60px; 
+  align-items: flex-start; /* para dar espaço em cima */
+  padding-top: 60px;       /* aumenta espaço superior */
   box-sizing: border-box;
 }
 
-/* --- CARD --- */
+#formulario.ativo {
+  display: flex;
+  opacity: 1;
+}
+
+/* CARD DO QUESTIONÁRIO */
 .card {
   background: #fff;
-  max-width: 300px;       
-  width: 80%;             
-  padding: 60px 20px 40px;
+  max-width: 380px;  /* já confirmado como perfeito */
+  width: 85%;        /* espaço lateral */
+  padding: 40px 20px;
   border-radius: 20px;
-  box-shadow: 0 18px 45px rgba(0,0,0,0.25);
-  text-align: left;
-  margin: 0 auto;
-}
-
-/* TÍTULO CARD */
-.card h2 {
+  box-shadow: 0 10px 30px rgba(0,0,0,0.25);
   text-align: center;
-  color: #6a1b9a;
-  margin-bottom: 20px;
-  font-size: 22px;
 }
 
-/* barra de progresso */
+/* Barra de progresso */
 .progress {
   height: 4px;
   background: #e0e0e0;
@@ -96,12 +95,13 @@ html, body {
   transition: width 0.4s ease;
 }
 
+/* Labels e Inputs */
 label {
   font-weight: bold;
   margin-top: 14px;
   display: block;
+  text-align: left;
 }
-
 input, select, textarea, button {
   width: 100%;
   padding: 12px;
@@ -118,19 +118,13 @@ button {
   border: none;
   margin-top: 16px;
   font-weight: bold;
-  cursor: pointer;
-  transition: background 0.3s;
 }
-button:hover { background: #4a148c; }
 button.sucesso { background: #2e7d32; }
 button:disabled { opacity: 0.7; }
 
-.final {
-  text-align: center;
-}
-.final .check {
-  font-size: 56px;
-  color: #2e7d32;
+h2 {
+  margin-bottom: 12px;
+  color: #6a1b9a;
 }
 </style>
 </head>
@@ -138,12 +132,12 @@ button:disabled { opacity: 0.7; }
 
 <!-- TELA INICIAL -->
 <div id="intro">
-  <button onclick="mostrarFormulario()">Acessar questionário</button>
+  <button onclick="mostrarFormulario()">Acessar Questionário</button>
 </div>
 
-<!-- FORMULÁRIO -->
+<!-- SEGUNDA TELA -->
 <div id="formulario">
-  <div class="card" id="card">
+  <div class="card">
     <h2>Visitas Externas</h2>
     <div class="progress"><span id="progressBar"></span></div>
 
@@ -186,7 +180,7 @@ button:disabled { opacity: 0.7; }
     <button id="btnLoc" onclick="capturarLocalizacao()">📍 Capturar Localização</button>
     <p id="localizacao"></p>
 
-    <button id="btnFoto" onclick="abrirCamera()">📸 Tirar Foto</button>
+    <button onclick="abrirCamera()">📸 Tirar Foto</button>
     <input type="file" id="camera" hidden accept="image/*" capture="environment">
 
     <button id="btnEnviar" onclick="enviar()">✅ Confirmar Visita</button>
@@ -195,51 +189,53 @@ button:disabled { opacity: 0.7; }
 
 <script>
 let latitude, longitude, endereco = "", fotoBase64 = null;
+
+// URL do seu WebApp Google Apps Script
 const API_URL = "https://script.google.com/macros/s/AKfycbw3kM0KukrHTN_c0K0fQQXJAKFxBFVd4EmOyuopHBsmrac9agIgrBZvWxzUnIdo_xzG9w/exec";
 
-// barra de progresso
+// Campos para barra de progresso
 const campos = ["vendedor","codigoVendedor","loja","tipoCliente","statusVisita"];
 campos.forEach(id => document.getElementById(id).addEventListener("input", atualizarProgresso));
-let progressoExtra = 0;
+
 function atualizarProgresso() {
-  let preenchidos = campos.filter(id => document.getElementById(id).value).length;
-  let total = campos.length + 2; // localização + foto
-  let porcentagem = ((preenchidos + progressoExtra)/total)*100;
-  document.getElementById("progressBar").style.width = porcentagem + "%";
+  const p = campos.filter(id => document.getElementById(id).value).length;
+  document.getElementById("progressBar").style.width = (p / campos.length) * 100 + "%";
 }
 
-// Transição tela inicial → formulário
+// --- TRANSIÇÃO DE TELAS ---
 function mostrarFormulario() {
-  document.getElementById("intro").style.display = "none";
-  document.getElementById("formulario").style.display = "flex";
+  const intro = document.getElementById("intro");
+  const form = document.getElementById("formulario");
+
+  intro.classList.add("fade-out");
+  setTimeout(() => form.classList.add("ativo"), 1500);
 }
 
+// --- LOCALIZAÇÃO ---
 function capturarLocalizacao() {
   navigator.geolocation.getCurrentPosition(async pos => {
     latitude = pos.coords.latitude;
     longitude = pos.coords.longitude;
+
     const res = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`);
     const data = await res.json();
     endereco = data.display_name || "";
 
-    document.getElementById("btnLoc").textContent = "Localização capturada ✅";
-    document.getElementById("btnLoc").classList.add("sucesso");
+    const btnLoc = document.getElementById("btnLoc");
+    btnLoc.textContent = "Localização capturada ✅";
+    btnLoc.classList.add("sucesso");
     document.getElementById("localizacao").innerText = endereco;
-
-    progressoExtra++; atualizarProgresso();
   });
 }
 
-function abrirCamera() { document.getElementById("camera").click(); }
+// --- CÂMERA ---
 document.getElementById("camera").addEventListener("change", e => {
   const reader = new FileReader();
-  reader.onload = () => {
-    fotoBase64 = reader.result;
-    progressoExtra++; atualizarProgresso();
-  };
+  reader.onload = () => fotoBase64 = reader.result;
   reader.readAsDataURL(e.target.files[0]);
 });
 
+// --- ENVIO ---
 function enviar() {
   const btnEnviar = document.getElementById("btnEnviar");
   btnEnviar.textContent = "Enviando...";
@@ -262,7 +258,8 @@ function enviar() {
   })
   .then(r => r.json())
   .then(() => {
-    document.getElementById("card").innerHTML = `
+    const card = document.querySelector(".card");
+    card.innerHTML = `
       <div class="final">
         <div class="check">✅</div>
         <h2>Visita registrada</h2>
@@ -275,6 +272,11 @@ function enviar() {
     btnEnviar.textContent = "Erro ao enviar";
     btnEnviar.disabled = false;
   });
+}
+
+// --- ABRIR CÂMERA ---
+function abrirCamera() {
+  document.getElementById("camera").click();
 }
 </script>
 </body>
